tests/security/taintSpecializedMethodForAnonymousInstance/output.txt
ERROR: TaintedData - input.hack:6:6 - Data from a URL query string found its way to an HTML tag